--- a/Layer/Layer.vcxproj
+++ b/Layer/Layer.vcxproj
@@ -91,11 +91,15 @@ xcopy /Y "$(SolutionDir)SDL2_image-2.0.0\lib\x86\*.dll" "$(OutDir)"</Command>
   <ItemGroup>
     <ClCompile Include="font.cpp" />
     <ClCompile Include="game0.cpp" />
+    <ClCompile Include="util.cpp" />
+    <ClCompile Include="vector2d.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="font.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="SDL_opengl_util.h" />
+    <ClInclude Include="util.h" />
+    <ClInclude Include="vector2d.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
